# nerf-lab

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
include/nerf-lab/: cuda_common.h  cuda_texture.h
include/nerf-lab/data/: camera_model.h  colmap_dataset.h  dataset.h  image_handle.h
include/nerf-lab/gui/: app.h  arcball.h  main_camera.h  shader.h  texture.h
include/nerf-lab/models/: nerf.h  qat_fully_fused_mlp.h  type_traits.h  volume_renderer.h
include/nerf-lab/pipeline/: data_manager.h  nerf_trainer.h
shaders/: camera_frustrum_fs.glsl  camera_frustrum_vs.glsl  grid_fs.glsl  grid_vs.glsl  test_cube_fs.glsl  test_cube_vs.glsl
src/: cli.cu  nerf-lab.cpp
src/cuda/: cuda_texture.cu
src/data/: camera_model.cpp  colmap_dataset.cpp  image_handle.cpp
src/gui/: app.cpp  arcball.cpp  main_camera.cpp  shader.cpp  texture.cpp
src/models/: nerf.cu
src/pipeline/: data_manager.cu
tests/: CMakeLists.txt  cuda_reduce_test.cu  qat_threadblock_layer_test.cu  volume_renderer_test.cu
